<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:theme="@style/ArrayStyle"
              android:background="@color/colorBackground"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.5"
            android:id="@+id/text_view_lesson_dialog"
            android:text="@string/editor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:textColorHint="@color/textColorHint"
            android:id="@+id/edit_text_lesson_dialog"
            android:layout_weight="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.5"
            android:id="@+id/text_view_teacher_dialog"
            android:text="@string/editor_teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:textColorHint="@color/textColorHint"
            android:id="@+id/edit_text_teacher_dialog"
            android:layout_weight="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.5"
            android:id="@+id/text_view_room_dialog"
            android:text="@string/editor_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:textColorHint="@color/textColorHint"
            android:id="@+id/edit_text_room_dialog"
            android:layout_weight="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.5"
            android:text="@string/editor_time_from"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="25sp"
            android:id="@+id/text_view_time_picker_from_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.5"
            android:id="@+id/text_view_time_to_dialog"
            android:text="@string/editor_time_to"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="25sp"
            android:id="@+id/text_view_time_picker_to_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/textColorPrimary"
            android:layout_weight="0.33"
            android:id="@+id/checkbox_up_week_dialog"
            android:text="@string/editor_up_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/textColorPrimary"
            android:layout_weight="0.33"
            android:id="@+id/checkbox_window_dialog"
            android:text="@string/editor_window"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/textColorPrimary"
            android:layout_weight="0.33"
            android:id="@+id/checkbox_down_week_dialog"
            android:text="@string/editor_down_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:background="@color/colorActionBar"
            android:layout_weight="0.33"
            android:id="@+id/button_ok_dialog"
            android:text="@string/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:background="@color/colorActionBar"
            android:layout_weight="0.33"
            android:id="@+id/button_cancel_dialog"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:background="@color/colorActionBar"
            android:layout_weight="0.33"
            android:id="@+id/button_clear_dialog"
            android:text="@string/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>